kubernetes/10-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: employee-app-ingress
  namespace: emp-directory
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: employee
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: employee-app
                port:
                  number: 5000
